--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ tower-cookies = "0.11.0"
 lazy-regex = "3"
 strum_macros = "0.27.1"
 uuid = {version = "1.15.1", features = ["v4","fast-rng",]}
-
+# -- Watch
+cargo-watch = "8.5.3"
 
 [dev-dependencies]
 anyhow = "1"
