--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ DB_PASSWORD=postgres
 DB_DB_NAME=rust_axum_app
 DB_MAX_CONNECTIONS=10
 DB_MIN_CONNECTIONS=2
-JWT_SECRET=secret
+JWT_ACCESS_TOKEN_SECRET=secret
+JWT_ACCESS_TOKEN_EXPIRES_IN=60000
