--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time", "
 argon2 = "0.5"
 rand_core = { version = "0.9.3", features = ["std"] }
 jsonwebtoken = "9.3.1"
+rust-i18n = "3.1.3"
 
 [dev-dependencies]
 anyhow = "1"
