--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
 description = "Rust Axum App"
 
+[workspace]
+members = [".", "migration"]
+
 [workspace.lints.rust]
 unsafe_code = "forbid"
 unused = "allow"
@@ -13,6 +16,7 @@ unused = "allow"
 workspace = true
 
 [dependencies]
+migration = { path = "migration" }
 async-trait = "0.1.87"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
@@ -39,7 +43,6 @@ rand_core = { version = "0.9.3", features = ["std"] }
 jsonwebtoken = "9.3.1"
 rust-i18n = "3.1.3"
 sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
-sea-orm-migration = "1.1.7"
 
 [dev-dependencies]
 anyhow = "1"
