--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ rand_core = { version = "0.9.3", features = ["std"] }
 jsonwebtoken = "9.3.1"
 rust-i18n = "3.1.3"
 sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
+strum = "0.27.1"
 
 [dev-dependencies]
 anyhow = "1"
