--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DB_MAX_CONNECTIONS=10
 DB_MIN_CONNECTIONS=2
 JWT_ACCESS_TOKEN_SECRET=secret
 JWT_ACCESS_TOKEN_EXPIRES_IN=60000
+JWT_REFRESH_TOKEN_SECRET=secret
+JWT_REFRESH_TOKEN_EXPIRES_IN=60000
