--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,10 @@ tower-cookies = "0.11.0"
 lazy-regex = "3"
 strum_macros = "0.27.1"
 uuid = {version = "1.15.1", features = ["v4","fast-rng",]}
-cargo-watch = "8.5.3"
 tower = "0.5.2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 validator = { version = "0.20.0", features = ["derive"] }
-sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 config = "0.15.11"
@@ -44,6 +42,7 @@ jsonwebtoken = "9.3.1"
 rust-i18n = "3.1.3"
 sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
 strum = "0.27.1"
+time = "0.3.39"
 
 [dev-dependencies]
 anyhow = "1"
