feat: add files module

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ JWT_ACCESS_TOKEN_SECRET=secret
 JWT_ACCESS_TOKEN_EXPIRES_IN=60000
 JWT_REFRESH_TOKEN_SECRET=secret
 JWT_REFRESH_TOKEN_EXPIRES_IN=60000
+FILES_UPLOAD_DIR=uploads
+FILES_BASE_URL=/uploads
