--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ async-trait = "0.1.87"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_with = "3.12.0"
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["multipart"]}
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tower-cookies = "0.11.0"
 lazy-regex = "3"
