feat: add mail service

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 # An example of .env file, don't assign sensitive data here
 
+# App
+APP_URL=http://localhost:3000
+
+# Environment
+ENVIRONMENT=development
+
+# Database
 DATABASE_URL=postgres://postgres:postgres@localhost/rust_axum_app
 DB_HOST=localhost
 DB_PORT=5432
@@ -8,9 +15,23 @@ DB_PASSWORD=postgres
 DB_DB_NAME=rust_axum_app
 DB_MAX_CONNECTIONS=10
 DB_MIN_CONNECTIONS=2
+
+# Token
 JWT_ACCESS_TOKEN_SECRET=secret
 JWT_ACCESS_TOKEN_EXPIRES_IN=60000
 JWT_REFRESH_TOKEN_SECRET=secret
 JWT_REFRESH_TOKEN_EXPIRES_IN=60000
+CONFIRMATION_TOKEN_SECRET=secret
+CONFIRMATION_TOKEN_EXPIRES_IN=60000
+
+# Files
 FILES_UPLOAD_DIR=uploads
 FILES_BASE_URL=/uploads
+
+# SMTP
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_USERNAME=
+SMTP_PASSWORD=
+EMAIL_FROM=app@example.com
+EMAIL_TEMPLATES_DIR=resources/templates/emails
