--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,9 @@ rust-i18n = "3.1.3"
 sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
 strum = "0.27.1"
 time = "0.3.39"
+reqwest = { version = "0.12.14", features = ["json"] }
+lettre = { version = "0.11.15", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
+tera = "1.20.0"
 
 [dev-dependencies]
 anyhow = "1"
