chore: improve enviroment configuration and .env

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,8 @@
 
 # App
 APP_URL=http://localhost:3000
-
-# Environment
-ENVIRONMENT=development
+APP_PORT=3000
+APP_ENVIRONMENT=development
 
 # Database
 DATABASE_URL=postgres://postgres:postgres@localhost/rust_axum_app
@@ -12,17 +11,17 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_DB_NAME=rust_axum_app
+DB_NAME=rust_axum_app
 DB_MAX_CONNECTIONS=10
 DB_MIN_CONNECTIONS=2
 
-# Token
+# Tokens
 JWT_ACCESS_TOKEN_SECRET=secret
-JWT_ACCESS_TOKEN_EXPIRES_IN=60000
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600
 JWT_REFRESH_TOKEN_SECRET=secret
-JWT_REFRESH_TOKEN_EXPIRES_IN=60000
+JWT_REFRESH_TOKEN_EXPIRES_IN=2592000
 CONFIRMATION_TOKEN_SECRET=secret
-CONFIRMATION_TOKEN_EXPIRES_IN=60000
+CONFIRMATION_TOKEN_EXPIRES_IN=86400
 
 # Files
 FILES_UPLOAD_DIR=uploads
