--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,11 +3,11 @@ services:
     image: postgres:17-alpine
     restart: always
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: rust_axum_app
+      POSTGRES_USER: "${DB_USERNAME:-postgres}"
+      POSTGRES_PASSWORD: "${DB_PASSWORD:-postgres}"
+      POSTGRES_DB: "${DB_NAME:-rust_axum_app}"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
@@ -23,5 +23,42 @@ services:
       - "1025:1025"
       - "1080:1080"
 
+#  app:
+#    build:
+#      context: .
+#      dockerfile: dev.Dockerfile
+#      target: development
+#    restart: always
+#    environment:
+#      DATABASE_URL: "postgres://${DB_USERNAME:-postgres}:${DB_PASSWORD:-postgres}@db/${DB_NAME:-rust_axum_app}"
+#      APP_URL: "${APP_URL:-http://localhost:3000}"
+#      APP_PORT: "${APP_PORT:-3000}"
+#      APP_ENVIRONMENT: "${APP_ENVIRONMENT:-development}"
+#      JWT_ACCESS_TOKEN_SECRET: "${JWT_ACCESS_TOKEN_SECRET:-secret}"
+#      JWT_ACCESS_TOKEN_EXPIRES_IN: "${JWT_ACCESS_TOKEN_EXPIRES_IN:-3600}"
+#      JWT_REFRESH_TOKEN_SECRET: "${JWT_REFRESH_TOKEN_SECRET:-secret}"
+#      JWT_REFRESH_TOKEN_EXPIRES_IN: "${JWT_REFRESH_TOKEN_EXPIRES_IN:-2592000}"
+#      CONFIRMATION_TOKEN_SECRET: "${CONFIRMATION_TOKEN_SECRET:-secret}"
+#      CONFIRMATION_TOKEN_EXPIRES_IN: "${CONFIRMATION_TOKEN_EXPIRES_IN:-86400}"
+#      FILES_UPLOAD_DIR: "${FILES_UPLOAD_DIR:-uploads}"
+#      FILES_BASE_URL: "${FILES_BASE_URL:-/uploads}"
+#      SMTP_HOST: "mail-dev"
+#      SMTP_PORT: "${SMTP_PORT:-1025}"
+#      SMTP_USERNAME: "${SMTP_USERNAME}"
+#      SMTP_PASSWORD: "${SMTP_PASSWORD}"
+#      EMAIL_FROM: "${EMAIL_FROM:-app@example.com}"
+#      EMAIL_TEMPLATES_DIR: "${EMAIL_TEMPLATES_DIR:-resources/templates/emails}"
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#    ports:
+#      - "${APP_PORT:-3000}:${APP_PORT:-3000}"
+#    volumes:
+#      - .:/app
+#      - cargo-cache:/usr/local/cargo/registry
+#      - target-cache:/app/target
+
 volumes:
   postgres-data:
+#  cargo-cache:
+#  target-cache:
