--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ reqwest = { version = "0.12.14", features = ["json"] }
 lettre = { version = "0.11.15", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 tera = "1.20.0"
 shaku = "0.6.2"
+shaku_axum = "0.6.0"
 
 [dev-dependencies]
 anyhow = "1"
